banking app commit